# study-hegel-cxx

./: CMakeLists.txt  README.adoc  main.cxx
study/: CMakeLists.txt
